--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -1,3 +1,19 @@
+template(name='skve')
+    // a.ui.image.big.link.label.set_session_v(class=calculated_class)
+    .ui.button.set_session_v.say(class=calculated_class title=t)
+        // if i
+        if selected 
+            // +i n=i cl='ui mini inline image'
+            i.large.icon(class=i)
+        else
+            // +iios n=i cl='ui mini inline image'
+            i.grey.icon(class=i)
+        unless ionly
+            if l
+                span #{l}
+            else 
+                span #{v}
+
 template(name='ismall')
     img(src="https://img.icons8.com/color/24/000000/#{name}.png" class=classes title=title)
     //- img(src="https://img.icons8.com/cotton/24/000000/#{name}.png" class=classes title=title)
