--- a/client/rpage.jade
+++ b/client/rpage.jade
@@ -11,14 +11,14 @@ template(name='reddit_page')
                 | {{ufrom data.created}}
                 .ui.basic.button.get_post permalink #{permalink}
                 div
-                // +skve k='view_section' v='main' l='main' i='content'
-                // +skve k='view_section' v='comments' l='comments' i='comment'
-                // +skve k='view_section' v='watson' l='emotion' i='dna'
-                // if tone
-                //     +skve k='view_section' v='tone' l='tone' i='smile grey'
-                // // +skve k='view_section' v='tags' l='tags' i='tags'
-                // +skve k='view_section' v='related' l='related' i='fork'
-                // +skve k='view_section' v='preview' l='preview' i='content'
+                +skve k='view_section' v='main' l='main' i='content'
+                +skve k='view_section' v='comments' l='comments' i='comment'
+                +skve k='view_section' v='watson' l='emotion' i='dna'
+                if tone
+                    +skve k='view_section' v='tone' l='tone' i='smile grey'
+                // +skve k='view_section' v='tags' l='tags' i='tags'
+                +skve k='view_section' v='related' l='related' i='fork'
+                +skve k='view_section' v='preview' l='preview' i='content'
                 // if skv_is 'view_section' 'main'
                 .scrolling
                     // if skv_is 'view_section' 'main'
@@ -73,8 +73,8 @@ template(name='reddit_page')
                         +tone
                         // +skve k='view_section' v='money' l='money' i='money'
                         // if skv_is 'view_section'
-                    // if skv_is 'view_section' 'preview'
-                    iframe(width="100%" height="800" src=data.url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
+                    if skv_is 'view_section' 'preview'
+                        iframe(width="100%" height="800" src=data.url frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)        
                     // +convert
                     // .spacer
                     // if skv_is 'view_section' 'tags'
