--- a/client/sub.jade
+++ b/client/sub.jade
@@ -354,15 +354,15 @@ template(name='flat_sub_tag_selector')
         strong #{this}
         // if in_dev
         //     small #{count}
-template(name='flat_sub_ruser_tag_selector')
-    // a.ui.big.image.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    .ui.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
-        if term
-            if term.watson.metadata.image
-                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
-        strong #{this}
-        // if in_dev
-        //     small #{count}
+// template(name='flat_sub_ruser_tag_selector')
+//     // a.ui.big.image.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+//     .ui.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+//         if term
+//             if term.watson.metadata.image
+//                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+//         strong #{this}
+//         // if in_dev
+//         //     small #{count}
 
 
 
