init crud love on home, love model

--- a/client/client.jade
+++ b/client/client.jade
@@ -35,6 +35,7 @@ head
 
 
 template(name='front')
+    +love
     .ui.basic.center.aligned.segment
         a(href="/discrete")
             i.massive.grey.yin.yang.icon
