centered love, clear fields on submit, confirm submit

--- a/client/client.jade
+++ b/client/client.jade
@@ -37,13 +37,11 @@ head
 template(name='front')
     +love
     .ui.basic.center.aligned.segment
-        a(href="/discrete")
-            i.massive.grey.yin.yang.icon
+        a(href="/m/love")
+            i.big.grey.yin.yang.icon
 
 template(name='layout')
     // +status
-    if is_admin
-        +nav
     .ui.bottom.attached.pushable.segment
         // +top_sidebar
         // +left_sidebar
