remove border-raidus on input, labeled love inputs, dummy sort icons, and init tag lcouds

--- a/client/client.jade
+++ b/client/client.jade
@@ -37,7 +37,7 @@ head
 template(name='front')
     +love
     .ui.basic.center.aligned.segment
-        a(href="/m/love")
+        a(href="/r/love")
             i.big.grey.yin.yang.icon
 
 template(name='layout')
